# MKU

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  diagnostic.txt  fort.7  ivette.py  pyproject.toml  rare_properties.csv  requirements-dev.txt  requirements.txt  timing_log.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
public/dftTest/dft/: run_dft.sh  water_opt.chk  water_opt.com
public/dftTest/oniom/: fort.7  oniom_methanol.chk  oniom_methanol.com  oniom_methanol_am1.chk  oniom_methanol_am1.com  (+5 more)
scripts/: analyze_fingerprint_size.py  build_training_dataset.py  chembl_target_name_cache.json  compact_wsl_disk.ps1  compute_fingerprints.py  control_room.py  dataset_diagnostic.py  download_training_sdfs.py  feature_benchmark_plot.py  fetch_inchikeys.py  fetch_pharma.py  recover_thermo_pharma_merge.py  train_xgboost_emfp.py  train_xgboost_targets.py  watch_convergence.py  watch_convergence_matplotlib.py  wide_output.py
scripts/hpc/: README.md  _common.py  probe_resources.sh  setup_ssh_key.sh  test_0_generate.py  test_1_connect.py  test_2_transfer.py  test_3_trivial_job.py  test_4_one_gaussian.py
src/ivette/: __main__.py
tests/: conftest.py  test_calculation_sets.py  test_clean_thermo.py  test_dft_compare.py  test_env.py  test_feature_benchmark.py  test_gaussian_parsers.py  test_gaussian_service.py  test_hardware_cache.py  test_hpo.py  test_marcus.py  test_modeling.py  test_params.py  test_parse_dft.py  test_pbs.py  test_presets.py  test_pubmed_gating.py  test_resume.py  test_scratch_guard.py  test_train_target_integration.py
(+56 files in other folders)
