[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivette"
version = "0.1.0"
description = "Chemoinformatics workbench: data mining, DFT pipeline, and ML for nitroaromatic property prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ivette = "ivette.__main__:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ivette*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src/ is also put on the path by the root conftest.py, so the suite runs
# without an editable install during local development.
pythonpath = ["src"]
